--- a/src/composer.json
+++ b/src/composer.json
@@ -4,7 +4,7 @@
     "license": "BSD-2-Clause",
     "require": {
         "jakoch/phantomjs-installer": "~2.1",
-        "jonnyw/php-phantomjs": ":4.*"
+        "jonnyw/php-phantomjs": "4.*"
     },
     "require-dev": {
         "psy/psysh": "@stable"
